--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,4 @@
-<h2 class="order-show__heading heading">Cart</h2>
+<h2 class="order-show-heading heading">Cart</h2>
 
 <div class="order-info">
   <p class="order-info__qunatity">
