--- a/app/views/shared/_form_items.html.erb
+++ b/app/views/shared/_form_items.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div class="items-form__field">
-    <%= f.submit "Edit", class: "itmes-form__button btn" %>
+    <%= f.submit "Edit", class: "itmes-form__button btn btn-primary" %>
   </div>
 
 <% end %>
