--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,24 +1,40 @@
 .btn {
-  padding: 10px 30px;
-  background-color: #F2C64E;
+  font-size: 16px;
+  padding: .4em 1.3em;
   color: #222;
   font-weight: bold;
-  font-size: 15px;
-  border: 1px solid #F2C64E;
   border-radius: 5%;
-  transition: all 0.3s ease-in-out;
   cursor: pointer;
   white-space: nowrap;
 }
 
-.sign-up-btn {
+.btn-secondary {
+  font-family: 'Roboto', 'sans';
+  font-size: 14px;
+  font-weight: bold;
+  padding: 0.3em 0.6em;
+  color: #222;
+  background-color: #fff;
+  border: 2px solid $primary-color-dark;
+  border-radius: 4px;
+}
+
+.btn-primary {
+  background-color: #F2C64E;
   border: 1px solid #CEA22A;
+}
+
+.sign-up-btn {
+  background-color: #F2C64E;
+  border: 1px solid #CEA22A;
+  padding: 10px 30px;
 }
 
 .sign-in-btn {
   background-color: #222;
   border: 1px solid #F0542C;
   color: #fff;
+  padding: 10px 30px;
 }
 .sign-in-btn:hover {
   color: #F2C64E;
@@ -36,21 +52,32 @@
   border-radius: 5%;
 }
 
-.btn-secondary {
-  font-family: 'Roboto', 'sans';
-  font-size: 16px;
-  font-weight: bold;
-  padding: 0.3em 0.6em;
-  color: #222;
-  background-color: #fff;
-  border: 2px solid $primary-color-dark;
-  border-radius: 4px;
-}
-
 .btn-filter {
   padding: 5px 20px;
   background-color: #fff;
   border: 2px solid $secondary-color;
   border-radius: 4px;
   font-weight: bold;
+}
+
+a[class*=btn-action] {
+  padding: 6px 15px;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+
+.btn-action-show {
+  border: 2px solid #cc9018;
+}
+
+.btn-action-paid {
+  border: 2px solid #3284bb,
+}
+
+.btn-action-cancel {
+  border: 2px solid #f85032;
+}
+
+.btn-action-complete {
+  border: 2px solid #449b6d;
 }
