--- a/app/assets/stylesheets/layout/_spacing.scss
+++ b/app/assets/stylesheets/layout/_spacing.scss
@@ -1,3 +1,22 @@
 .heading {
   margin-bottom: 20px;
 }
+
+.item-title {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.item-description {
+  margin-bottom: 20px;
+}
+
+.list-title {
+  margin-bottom: 20px;
+}
+
+.page-heading {
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
