--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class="item-index__heading heading">Menu</h2>
+<h2 class="item-index-heading heading">Menu</h2>
 
 <div class="filter-items">
   <form action="/">
