--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -39,6 +39,10 @@ input[type=password] {
   }
 }
 
+input:required {
+  border: red;
+}
+
 input::placeholder,  
 textarea::placeholder {
   margin-top: 5px;
