--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -5,8 +5,8 @@
 
 <%= form_with url: "/dashboard", method: :get, class: "orders-checkbox" do |f| %>
   <%= f.collection_check_boxes :status, Order.select(:status).distinct, :status, :status, {include_hidden: false }, {} do |b| %>
-    <%= f.label :status => "sta" do %>
-      <%= f.check_box :status %>
+    <%= b.label do %>
+      <%= b.check_box + b.text %>
     <% end %>
   <% end %>
   <%= f.submit "Filter", class: "btn-filter" %>
@@ -26,7 +26,7 @@
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td class="orders-table__order-id"><%= link_to order.id, orders_path(order) %></td>
+        <td class="orders-table__order-id"><%= link_to order.id, dashboard_orders_path(order) %></td>
         <td class="orders-table__user-name">
         <% if order.user.nil? %>
           <%= "Visitor" %>
