--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,25 +1,32 @@
-<h2 class="item-index-heading heading">Menu</h2>
+<% if admin_singed_in? %>
 
-<div class="filter-items">
-  <form action="/">
-    <%= label_tag "Categories:", nil,  class: "filter_items__label" %>
-    <%= select(:category, :id, @category_options) %>
-    <%= submit_tag "Filter", class: "btn-filter" %>
-  </form>
-</div>
+  <%= render 'shared/admin/items_table' %>
 
-<ul class="menu-list">
-  <% @items.each do |item| %>
-    <% if item.retired %>
-      <% if user_signed_in? && current_user.admin %>
-        <li>
-          <%= render 'shared/item', item: item %>
-        </li>
+<% else %>
+  <h2 class="item-index-heading heading">Menu</h2>
+
+  <div class="filter-items">
+    <form action="/">
+      <%= label_tag "Categories:", nil,  class: "filter_items__label" %>
+      <%= select(:category, :id, @category_options) %>
+      <%= submit_tag "Filter", class: "btn-filter" %>
+    </form>
+  </div>
+
+  <ul class="menu-list">
+    <% @items.each do |item| %>
+      <% if item.retired %>
+        <% if user_signed_in? && current_user.admin %>
+          <li>
+            <%= render 'shared/item', item: item %>
+          </li>
+        <% end %>
+      <% else %>
+          <li>                  
+            <%= render 'shared/item', item: item  %>
+          </li>
       <% end %>
-    <% else %>
-        <li>                  
-          <%= render 'shared/item', item: item  %>
-        </li>
     <% end %>
-  <% end %>
-</ul>
+  </ul>
+<% end %>
+
