--- a/app/views/dashboard/items.html.erb
+++ b/app/views/dashboard/items.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th>Image</th>
       <th>Title</th>
+      <th>Price</th>
       <th>Description</th>
       <th>Categories</th>
       <th colspan=3></th>
@@ -19,6 +20,11 @@
       <td class="items-table__title">
         <div>
           <%= item.title %>
+        </div>
+      </td>
+      <td class="items-table__title">
+        <div>
+          <%= item.price %>
         </div>
       </td>
       <td class="items-table__description">
