--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -26,10 +26,11 @@
     <nav class="dashboard-nav">
       <ul class="admin-nav">
         <li><%= link_to "Dashboard", dashboard_path %></li>
-        <li><%= link_to "Items", dashboard_items_path  %></li>
-        <li><%= link_to "Categories", categories_path  %></li>
-        <li><%= link_to "New Item", new_item_path   %></li>
+        <li><%= link_to "Items", dashboard_items_path %></li>
+        <li><%= link_to "Categories", categories_path %></li>
+        <li><%= link_to "New Item", new_item_path %></li>
         <li><%= link_to "New Category", categories_path %></li>
+        <li><%= link_to "New Sale", new_sale_path %></li>
       </ul>
     </nav>
   <% end %>
