finish implementation of sale feature

--- a/app/views/sales/new.html.erb
+++ b/app/views/sales/new.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class="field">
-    <%= f.number_field :title, min: 0, max: 100, step: 5, placeholder: "Discount in %" %>
+    <%= f.number_field :discount, min: 0, max: 100, step: 5, placeholder: "Discount in %" %>
   </div>
 
 
