--- a/app/assets/stylesheets/layout/_grids.scss
+++ b/app/assets/stylesheets/layout/_grids.scss
@@ -42,3 +42,16 @@ img {
     margin-bottom: 10px;
   }
 }
+
+
+.grid-wrapper {
+  display: grid;
+  aside {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+  .menu-list {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+  }
+}
