--- a/app/assets/stylesheets/shared/_item_card.scss
+++ b/app/assets/stylesheets/shared/_item_card.scss
@@ -2,6 +2,7 @@
 
 .item-container {
   display: flex;
+  flex-direction: column;
   padding: 10px;
   border: 1px solid #d6d9dc;
   border-radius: 4px;
