--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -11,7 +11,7 @@
 </div>
 -->
 <div class="grid-wrapper">
-  <aside>
+  <aside class=aside-left>
     <h3>Categories</h3>
     <ul>
       <% @categories.each do |category| %>
