--- a/app/assets/stylesheets/layout/_grids.scss
+++ b/app/assets/stylesheets/layout/_grids.scss
@@ -25,11 +25,10 @@ img {
 
 .menu-list {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
 
   li {
-    flex: 0 1 40%;
+    flex: 0 1 25%;
     padding: 10px;
     margin-bottom: 20px;
     list-style: none;
@@ -46,6 +45,7 @@ img {
 
 .grid-wrapper {
   display: grid;
+  gap: 40px;
   aside {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
