--- a/app/assets/stylesheets/shared/_item_card.scss
+++ b/app/assets/stylesheets/shared/_item_card.scss
@@ -1,64 +1,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Revalia&display=swap');
 
 .item-container {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  min-height: 320px;
   padding: 10px;
   border: 1px solid #d6d9dc;
   border-radius: 4px;
   box-shadow: 5px 4px 4px #eff0f1;
-}
-
-
-.item-container > a {
-  display: block;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  flex: 0 0 100px;
-  height: 100px;
-  margin-bottom: 10px;
-  border-radius: 100%;
-}
-
-
-
-.item-info { 
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin-left: 10px;
-  h3 {
+  > a {
+    flex: 0 0 20%;
+    display: block;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100px;
+    margin: 0;
     margin-bottom: 10px;
   }
-
-  p {
-    margin-top: 8px;
-    font-size: 14px;
-    text-align: left;
+  &__item-info { 
+    flex: 0 0 80%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    h3 {
+      margin-bottom: 10px;
+    }
+    
+    p {  
+      margin-top: 8px;
+      font-size: 14px;
+      text-align: left;
+    }
+    
+    h3 {
+      > a {
+        color: #000;
+        padding: 0;
+        margin: 0;
+        margin-bottom: 5px;
+        font-size: 14px;
+        font-weight: bold;
+        text-align: left;
+      }
+    }
+    span {
+      margin-bottom: 5px;
+      display: block;
+      font-size: 15px;
+      font-weight: bold;
+      color: #F0542C;
+    }
+    .btn-add-to-cart {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+    }
   }
-
-  h3 > a {
-    color: #000;
-    padding: 0;
-    margin: 0;
-    margin-bottom: 5px;
-    font-size: 14px;
-    font-weight: bold;
-    text-align: left;
-  }
-  span {
-    margin-bottom: 5px;
-    display: block;
-    font-size: 15px;
-    font-weight: bold;
-    color: #F0542C;
-  }
-  .btn-add-to-cart {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-  }
-
 }
+
