--- a/app/views/shared/_item.html.erb
+++ b/app/views/shared/_item.html.erb
@@ -2,8 +2,8 @@
   <% if item.image? %>
     <%= link_to "", {}, { style: "background-image: url(\"#{item.image.url}\")" } %>
   <% end %>
-  <div class="item-info">
-    <h3><%= link_to item.title, item_path(item) %></h3>
+  <div class="item-container__item-info">
+    <h3><%= link_to adjust_length(item.title, 15), item_path(item) %></h3>
     <span><%= number_to_currency(item.price, precision: 2) %></span>
     <% if item.on_sale? %>
       <span><%= number_to_currency(item.discounted_price, precision: 2) %></span>
