--- a/app/assets/stylesheets/items/_show.scss
+++ b/app/assets/stylesheets/items/_show.scss
@@ -21,3 +21,20 @@
     
   }
 }
+
+.suggested-items {
+  h2 {
+    margin-bottom: 20px;
+  }
+}
+
+.suggested-items-list {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  max-width: 500px;
+  &__list-item {
+   flex: 0 1 31%; 
+   margin-bottom: 10px;
+  }
+}
