--- a/app/views/menus/new.html.erb
+++ b/app/views/menus/new.html.erb
@@ -3,32 +3,8 @@
 <p>10% off</p>
 
 
-<%= form_with model: @menu do |f| %>
-
-  <div class="field">
-    <%= f.label "Appetaizer" %>
-    <%= f.select :appetaizer_id, options_from_collection_for_select(@appetaizers, :id, :title), 
-                                                                   { class: "items-form__select" } %>
-  </div>
-  <div class="field">
-    <%= f.label "Main Dish" %>
-    <%= f.select :main_dish_id, options_from_collection_for_select(@main_dishes, :id, :title), 
-                                                                  { class: "items-form__select" } %>
-  </div>
-  <div class="field">
-    <%= f.label "Dessert" %>
-    <%= f.select :dessert_id, options_from_collection_for_select(@desserts, :id, :title),
-                                                                { class: "items-form__select" } %>
-  </div>
-  <div class="field">
-    <%= f.label "Drink" %>
-    <%= f.select :drink_id, options_from_collection_for_select(@drinks, :id, :title),
-                                                              { class: "items-form__select" } %>
-  </div>
-
-  <div class="field">
-    <%= f.submit "Add to Order" %>
-  </div>
-
-<% end %>
-
+<%= render 'shared/form_menu', { appetaizers: @appetaizers,
+                                 main_dishes: @main_dishes, 
+                                 desserts: @desserts, 
+                                 drinks: @drinks,
+                                 menu: @menu} %>
