--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -4,3 +4,4 @@ $secondary-color: #F0542c !default;
 $accent-blue: #0075ff !default;
 $dark: #222 !default;
 $light_grey: #f6f6f6 !default;
+$destroy-action: #e22d0081 !default;
