--- a/app/assets/stylesheets/components/_tables.scss
+++ b/app/assets/stylesheets/components/_tables.scss
@@ -84,6 +84,7 @@ table {
   &__item-price, 
   &__item-subtotal,
   &__item-quantity, 
+  &__menu-quantity,
   &__total {
     text-align: right;
   }
