--- a/app/assets/stylesheets/items/_index.scss
+++ b/app/assets/stylesheets/items/_index.scss
@@ -1,12 +1,23 @@
-.filter-items {
-  display: flex;
-  margin-left: 30px;
-
-  select {
-    width: 120px;
-  }
-
-  &__label {
+.menu-option {
+  &__button {
+    display: inline-block;
+    padding: 1em 3em;
+    margin-bottom: 2%;
     font-weight: bold;
+    background-color: $secondary-color;
+    color: #fff;
+    border: 1px solid $primary-color;
+    border-radius: 4%;
+  }
+}
+
+.items-filter {
+  max-width: 200px;
+  &__heading {
+    font-family: 'Revalia', cursive;
+    font-size: 1.3rem;
+  }
+  &__list-item {
+    border-bottom: 1px solid $light_grey;
   }
 }
