--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,5 +25,9 @@
     <div class="container">
       <%= yield %>
     </div>
+
+    <div class="footer">
+      <%= render "shared/footer" %>
+    </div>
   </body>
 </html>
