--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -28,6 +28,7 @@
       <th class="order-table__item-quantity">Quantity</th>
       <th class="order-table__item-price">Price</th>
       <th class="order-table__item-subtotal">Sub-total</th>
+      <th class="order-table__item-subtotal" colspan="2"></th>
     </tr>
   </thead>
   <tbody>
@@ -36,7 +37,7 @@
       <tr>
         <td class="order-table__menu-title" >Menu</td>
         <td class="order-table__menu-description" ><%= menu.description %></td>
-        <td class="order-table__menu-quntity" ><%= menu.quantity %></td>
+        <td class="order-table__menu-quantity" ><%= menu.quantity %></td>
         <td class="order-table__menu-price" ><%= number_to_currency(menu.price) %></td>
         <td class="order-table__menu-subtotal" ><%= number_to_currency(menu.sub_total) %></td>
         <td class="order-table__menu-remove" ><%= link_to "Remove Menu", menu_path(menu), method: :delete %></td>
@@ -51,14 +52,14 @@
         <td class="order-table__item-quantity"><%= link_to order_item.quantity, edit_order_item_path(order_item), class: "item-quantity" %></td>
         <td class="order-table__item-price"><%= number_to_currency(order_item.item.price) %></td>
         <td class="order-table__item-subtotal"><%= number_to_currency(order_item.sub_total) %></td>
-        <td><%= link_to "Remove Item", order_item_path(order_item, order_id: @order.id), method: :delete  %></td>
+        <td class="order-tabel__item-remove" colspan="2"><%= link_to "Remove Item", order_item_path(order_item, order_id: @order.id), method: :delete  %></td>
       </tr>    
     <% end %>    
   </tbody>
   <tfoot>
     <tr>
       <td colspan="3">Total</td>
-      <td class="order-table__total"><%= number_to_currency(@order.total_price) %></td>
+      <td class="order-table__total" colspan="2"><%= number_to_currency(@order.total_price) %></td>
     </tr>
   </tfoot>
 </table>
@@ -94,18 +95,20 @@
   <% end %>
 <% end %>
 
-<aside class="suggested-items">
-  <h2>Suggested Items:</h2>
-  <ul class="suggested-items-list">
-    <% @suggested_items.each do |item| %>
-      <li class="suggested-items-list__list-item">
-        <%= render 'shared/item', item: item %>
-      </li>
-    <% end %>
-  </ul>
-</aside>
+<% if @suggested_items.any? %>
+  <aside class="suggested-items">
+    <h2>Suggested Items:</h2>
+    <ul class="suggested-items-list">
+      <% @suggested_items.each do |item| %>
+        <li class="suggested-items-list__list-item">
+          <%= render 'shared/item', item: item %>
+        </li>
+      <% end %>
+    </ul>
+  </aside>
+<% end %>
 
-<% if @popular_items %>
+<% if @popular_items.any? %>
   <aside class="popular-items">
     <h2>Popular Items:</h2>
     <ul class="suggested-items-list">
