--- a/app/views/shared/_form_menu.html.erb
+++ b/app/views/shared/_form_menu.html.erb
@@ -25,7 +25,7 @@
 
   <div class="field">
     <%= f.label "Quantity" %>
-    <%= f.number_field :quantity, min: 1, max:10, step: 1 %>
+    <%= f.number_field :quantity, value: 1, in: 1..10, step: 1 %>
   </div>
 
 
