--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -25,7 +25,7 @@
   <% if admin_signed_in? %>
     <nav class="dashboard-nav">
       <ul class="admin-nav">
-        <li><%= link_to "Dashboard", dashboard_path %></li>
+        <li class="admin-nav__dashboard-item"><%= link_to "Dashboard", dashboard_path %></li>
         <li><%= link_to "Items", dashboard_items_path %></li>
         <li><%= link_to "Categories", categories_path %></li>
         <li><%= link_to "Sales", sales_path %></li>
