--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,12 +1,17 @@
 <h2 class="orders-heading heading">Orders</h2>
 
-
+<%= form_with ulr: orders_path, method: :get do |f| %>
+  <%= f.hidden_field :user_id, value: current_user.id %>
+  <%= f.label "Items Title or Item Description:" %>
+  <%= f.text_field :query %>
+  <%= f.submit "Search" %>
+<% end %>
 <nav>
   <ul>
-    <li><%= link_to "All", orders_path(status: "all"), class: "link"  %></li>
-    <li><%= link_to "Cancelled", orders_path(status: "cancelled"), class: "link" %></li>
-    <li><%= link_to "Ordered", orders_path(status: "ordered"), class: "link" %></li>
-    <li><%= link_to "Completed", orders_path(status: "completed"), class: "link" %></li>
+    <li><%= link_to "All", orders_path(status: "all", user_id: current_user.id), class: "link"  %></li>
+    <li><%= link_to "Cancelled", orders_path(status: "cancelled", user_id: current_user.id), class: "link" %></li>
+    <li><%= link_to "Ordered", orders_path(status: "ordered", user_id: current_user.id), class: "link" %></li>
+    <li><%= link_to "Completed", orders_path(status: "completed", user_id: current_user.id), class: "link" %></li>
   </ul>
 </nav>
 
@@ -16,6 +21,7 @@
       <th>Id</th>
       <th>Date</th>
       <th>Status</th>   
+      <th></th>
     </tr>
   </thead>
   <tbody>
